fixed overflow for text-block

--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,7 @@ first div in the grid  and place it in the grid. */
 .text-block {
   align-self: center;
   max-height: 250px;
+  overflow: auto;
 }
 
 @media screen and (min-width: 800px) {
